--- a/esm/models/模块总体说明.md
+++ b/esm/models/模块总体说明.md
@@ -1,3 +1,3 @@
 ## 模块总体说明
-- - esm3.pys 主要实现了对 ESM-3（Evolutionary Scale Modeling 3）预训练模型的本地推理（Inference）和生成（Generation）功能，并 不直接支持远程 API 调用。也就是说，esm3.pys 提供了模型加载、前向传播、编码和解码等核心功能，但并未内置用于远程调用的 API 接口。
-- 
+- esm3.pys 主要实现了对 ESM-3（Evolutionary Scale Modeling 3）预训练模型的本地推理（Inference）和生成（Generation）功能，并 不直接支持远程 API 调用。也就是说，esm3.pys 提供了模型加载、前向传播、编码和解码等核心功能，但并未内置用于远程调用的 API 接口。
+- esmc.py主要实现了对ESMC 模型 实现方式是 本地下载和加载预训练模型，而不是通过 API 调用远程的预训练模型。
