--- a/esm/models/模块总体说明.md
+++ b/esm/models/模块总体说明.md
@@ -1,5 +1,5 @@
 ## 模块总体说明
 - esm3.pys 主要实现了对 ESM-3（Evolutionary Scale Modeling 3）预训练模型的本地推理（Inference）和生成（Generation）功能，并 不直接支持远程 API 调用。也就是说，esm3.pys 提供了模型加载、前向传播、编码和解码等核心功能，但并未内置用于远程调用的 API 接口。可以加载的模型有：ESM3_OPEN_SMALL。  
-- esmc.py主要实现了对ESMC 模型 实现方式是 本地下载和加载预训练模型，而不是通过 API 调用远程的预训练模型。  
+- esmc.py主要实现了对ESMC 模型 实现方式是 本地下载和加载预训练模型，而不是通过 API 调用远程的预训练模型。 可以加载的模型有：ESMC_600M。 
 - function_decoder.py 实现了一个基于深度学习的函数标记解码器，用于将函数标记（Function Tokens）转换为结构化的功能注释和关键词。
 - vqvae.py 实现了一个针对蛋白质结构（或类似结构化数据）设计的 向量量化变分自编码器（Vector Quantized Variational Autoencoder, VQ-VAE） 模型。该模型通过编码器将结构化输入数据（如蛋白质的三维坐标）转换为离散的结构令牌（structure tokens），并通过解码器从这些离散令牌重建原始结构信息。  
