--- a/examples/说明.md
+++ b/examples/说明.md
@@ -1,2 +1,8 @@
 ## 说明
 - esmc_examples.py可以本地进行模型下载和运行。
+- forge_generate.py运行
+  在conda prompt里设置Forge API Key：
+  set ESM_API_KEY=3DBwNzxiM1NfpaN5OF4mHT
+  检查是否设置成功：
+  echo %ESM_API_KEY%
+  显示：3DBwNzxiM1NfpaN5OF4mHT，即成功了。
