--- a/examples/说明.md
+++ b/examples/说明.md
@@ -6,3 +6,6 @@
   检查是否设置成功：  
   echo %ESM_API_KEY%  
   显示：3DBwNzxiM1NfpaN5OF4mHT，即成功了。  
+  在/esm3/esm里启动VS code才可以运行。  
+  启动VS code命令：code .  
+  
