--- a/examples/说明.md
+++ b/examples/说明.md
@@ -19,4 +19,5 @@ def client(
     request_timeout=None,
 ):
 ```
-  
+ 总结：forge_generate.py是采用API进行远程调用esm3_sm_open_v1进行远程推理和生成。  
+ esm3_sm_open_v1通过Hugging Face也可以下载预训练模型后进行本地推理和生成的。  
