--- a/examples/说明.md
+++ b/examples/说明.md
@@ -23,3 +23,5 @@ def client(
  esm3_sm_open_v1通过Hugging Face也可以下载预训练模型后进行本地推理和生成的。  
 - raw_forwards.py
 正确运行了，打印出了结果。是在下载预训练模型ESM3_sm_open_v0后进行的。
+- generate.ipynb  
+  正常运行！
