--- a/examples/说明.md
+++ b/examples/说明.md
@@ -24,4 +24,6 @@ def client(
 - raw_forwards.py
 正确运行了，打印出了结果。是在下载预训练模型ESM3_sm_open_v0后进行的。
 - generate.ipynb  
-  正常运行！
+  正常运行！  
+- gfp_design.ipynb
+  运行正常！    
