--- a/examples/说明.md
+++ b/examples/说明.md
@@ -1,5 +1,7 @@
 ## 说明
 - esmc_examples.py可以本地进行模型下载和运行。
+- esmprotein.ipynb
+  运行正常！
 - forge_generate.py运行  
   在conda prompt里设置Forge API Key：  
   set ESM_API_KEY=3DBwNzxiM1NfpaN5OF4mHT  
