--- a/examples/说明.md
+++ b/examples/说明.md
@@ -2,6 +2,8 @@
 - esmc_examples.py可以本地进行模型下载和运行。
 - esmprotein.ipynb
   运行正常！
+- folding_inverse_folding_example.py
+  ？？
 - forge_generate.py运行  
   在conda prompt里设置Forge API Key：  
   set ESM_API_KEY=3DBwNzxiM1NfpaN5OF4mHT  
