--- a/examples/说明.md
+++ b/examples/说明.md
@@ -4,6 +4,8 @@
   运行正常！
 - folding_inverse_folding_example.py
   ？？
+- forge_generate.ipynb
+  ？？
 - forge_generate.py运行  
   在conda prompt里设置Forge API Key：  
   set ESM_API_KEY=3DBwNzxiM1NfpaN5OF4mHT  
