--- a/examples/说明.md
+++ b/examples/说明.md
@@ -5,7 +5,7 @@
 - folding_inverse_folding_example.py  
   ？？
 - forge_generate.ipynb  
-  ？？
+  运行正常！
 - forge_generate.py运行  
   在conda prompt里设置Forge API Key：  
   set ESM_API_KEY=3DBwNzxiM1NfpaN5OF4mHT  
