--- a/examples/说明.md
+++ b/examples/说明.md
@@ -7,8 +7,8 @@
   ？？
 - forge_generate.ipynb  
   运行正常！
-- forge_generate.py运行  
-  在conda prompt里设置Forge API Key：  
+- forge_generate.py
+  运行在conda prompt里设置Forge API Key：  
   set ESM_API_KEY=3DBwNzxiM1NfpaN5OF4mHT  
   检查是否设置成功：  
   echo %ESM_API_KEY%  
