--- a/examples/说明.md
+++ b/examples/说明.md
@@ -14,7 +14,9 @@
   echo %ESM_API_KEY%  
   显示：3DBwNzxiM1NfpaN5OF4mHT，即成功了。  
   在/esm3/esm里启动VS code才可以运行。  
-  启动VS code命令：code .
+  启动VS code命令：code .  
+- generate.ipynb  
+  ？？
 - local_generate.py  
   被forge_generate.py调用正确执行了，模型是esm3_sm_open_v1。
   同时调用了/esm/sdk/__init__.py：  
