--- a/examples/说明.md
+++ b/examples/说明.md
@@ -16,7 +16,7 @@
   在/esm3/esm里启动VS code才可以运行。  
   启动VS code命令：code .  
 - generate.ipynb  
-  ？？
+  运行正常！  
 - local_generate.py  
   被forge_generate.py调用正确执行了，模型是esm3_sm_open_v1。
   同时调用了/esm/sdk/__init__.py：  
