--- a/examples/说明.md
+++ b/examples/说明.md
@@ -1,6 +1,6 @@
 ## 说明
 - esmc_examples.py  
-  可以本地进行模型下载和运行。
+  可以本地进行模型下载和运行。不需要API TOKEN。
 - esmprotein.ipynb  
   运行正常！
 - folding_inverse_folding_example.py  
