--- a/examples/说明.md
+++ b/examples/说明.md
@@ -1,12 +1,12 @@
 ## 说明
 - esmc_examples.py  
-  可以本地进行模型下载和运行。不需要API TOKEN。
+  可以本地进行模型下载和运行。不需要API TOKEN。  
 - esmprotein.ipynb  
   运行正常！
 - folding_inverse_folding_example.py  
   ？？
 - forge_generate.ipynb  
-  运行正常！
+  运行正常！需要API TOKEN。  
 - forge_generate.py  
   运行在conda prompt里设置Forge API Key：  
   set ESM_API_KEY=3DBwNzxiM1NfpaN5OF4mHT  
