--- a/examples/说明.md
+++ b/examples/说明.md
@@ -1,8 +1,8 @@
 ## 说明
 - esmc_examples.py  
-  可以本地进行模型下载和运行。不需要API TOKEN。  
+  可以本地进行模型下载和运行。  
 - esmprotein.ipynb  
-  运行正常！
+  运行正常！不需要API TOKEN。  
 - folding_inverse_folding_example.py  
   ？？
 - forge_generate.ipynb  
