--- a/examples/说明.md
+++ b/examples/说明.md
@@ -16,7 +16,7 @@
   在/esm3/esm里启动VS code才可以运行。  
   启动VS code命令：code .  
 - generate.ipynb  
-  运行正常！
+  运行正常！需要API TOKEN。
 - gfp_design.ipynb  
   运行正常！   
 - local_generate.py  
