--- a/examples/说明.md
+++ b/examples/说明.md
@@ -18,7 +18,7 @@
 - generate.ipynb  
   运行正常！需要API TOKEN。
 - gfp_design.ipynb  
-  运行正常！   
+  运行正常！需要API TOKEN。     
 - local_generate.py  
   被forge_generate.py调用正确执行了，模型是esm3_sm_open_v1。
   同时调用了/esm/sdk/__init__.py：  
