--- a/examples/说明.md
+++ b/examples/说明.md
@@ -20,8 +20,9 @@
 - gfp_design.ipynb  
   运行正常！需要API TOKEN。     
 - local_generate.py  
-  被forge_generate.py调用正确执行了，模型是esm3_sm_open_v1。
-  同时调用了/esm/sdk/__init__.py：  
+  它单独本地调用（不用API）正常运行。 不需要API TOKEN。  
+  被forge_generate.py调用正确执行了，模型是esm3_sm_open_v1。  
+  同时调用了/esm/sdk/__init__.py这种情况下， 需要API TOKEN。  
 ```
 def client(
     model="esm3-sm-open-v1",
