--- a/examples/说明.md
+++ b/examples/说明.md
@@ -7,7 +7,7 @@
   ？？
 - forge_generate.ipynb  
   运行正常！需要API TOKEN。  
-- forge_generate.py  
+- forge_generate.py （需要到examplemple的上一级目录运行）   
   运行在conda prompt里设置Forge API Key：  
   set ESM_API_KEY=3DBwNzxiM1NfpaN5OF4mHT  
   检查是否设置成功：  
