--- a/examples/说明.md
+++ b/examples/说明.md
@@ -4,7 +4,7 @@
 - esmprotein.ipynb  
   运行正常！不需要API TOKEN。  
 - folding_inverse_folding_example.py  
-  ？？
+  没有运行错误，也没有结果。  
 - forge_generate.ipynb  
   运行正常！需要API TOKEN。  
 - forge_generate.py （需要到examplemple的上一级目录运行）   
